--- a/recipes/chickenCurry.html
+++ b/recipes/chickenCurry.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Odin Recipes</title>
+    <title>Indian Chicken Curry</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <p><a href="./recipes/chickenCurry.html">Indian Chicken Curry</a></p>
+    <h1>Indian Chicken Curry</h1>
   </body>
 </html>
