--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
       <li><a href="./recipes/chickenCurry.html">Indian Chicken Curry</a></li>
       <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+      <li><a href="./recipes/lambSouvlaki.html">Lasagna</a></li>
     </ul>
   </body>
 </html>
