--- a/recipes/lambSouvlaki.html
+++ b/recipes/lambSouvlaki.html
@@ -8,5 +8,63 @@
   </head>
   <body>
     <h1>Lamb Souvlaki</h1>
+    <img
+      src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F6739403.jpg&w=933&h=933&c=sc&poi=face&q=60"
+      alt="Lamb Souvlaki"
+    />
+
+    <h2>Description</h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
+      facilisis sapien lobortis mauris maximus tempus. Morbi dignissim diam sem,
+      non finibus urna pharetra posuere. Proin dapibus libero massa, quis
+      vestibulum magna gravida id. Aliquam a commodo velit, at malesuada enim.
+      In vel orci eget orci ultrices molestie sed eget metus. Morbi dignissim
+      nisi at nibh porta elementum. Aliquam rutrum pharetra augue, et pretium
+      odio pretium eu. Sed in nisl eros.
+    </p>
+    <p>
+      Cras suscipit, mi ut lobortis tristique, orci velit ultrices lacus, eu
+      placerat justo turpis eget est. Donec consequat condimentum efficitur.
+      Aenean nisi ipsum, bibendum efficitur elit eu, suscipit bibendum lacus.
+      Duis consectetur massa vitae porttitor vulputate. Phasellus arcu dolor,
+      porttitor nec velit sed, suscipit luctus nulla. Quisque facilisis ornare
+      est. Duis fringilla tellus a purus bibendum, at pretium sem maximus. Sed
+      et quam condimentum, lacinia turpis nec, lobortis nunc. Class aptent
+      taciti sociosqu ad litora torquent per conubia nostra, per inceptos
+      himenaeos.
+    </p>
+
+    <h2>Ingredients</h2>
+    <ul>
+      <li>⅓ cup olive oil</li>
+      <li>1 ½ tablespoons freshly squeezed lemon juice</li>
+      <li>1 ½ tablespoons red wine vinegar</li>
+      <li>1 ½ tablespoons chopped fresh oregano</li>
+      <li>2 cloves garlic, minced</li>
+      <li>½ teaspoon salt</li>
+      <li>¼ teaspoon ground black pepper</li>
+      <li>
+        1 ½ pounds boneless leg of lamb, trimmed of all fat and cut into 1-inch
+        cubes
+      </li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+      <li>
+        Whisk olive oil, lemon juice, red wine vinegar, oregano, garlic, salt,
+        and pepper together in a medium bowl. Add cubed lamb and stir until lamb
+        is coated with marinade. Cover and refrigerate 3 hours, or overnight.
+      </li>
+      <li>
+        Preheat an outdoor grill for medium-high heat and lightly oil the grate.
+      </li>
+      <li>
+        Thread marinated lamb onto skewers, reserving any remaining marinade.
+        Grill skewers until desired doneness, 10 to 12 minutes, basting with the
+        reserved marinade and turning occasionally for even cooking.
+      </li>
+    </ol>
   </body>
 </html>
