--- a/recipes/chickenCurry.html
+++ b/recipes/chickenCurry.html
@@ -26,6 +26,15 @@
       suitable substitutions.
     </p>
 
+    <h3>More Information</h3>
+    <p>
+      For more information on the recipe and its creator follow this
+      <a
+        href="https://www.allrecipes.com/recipe/212721/indian-chicken-curry-murgh-kari/"
+        >link</a
+      >.
+    </p>
+
     <h2>Ingredients</h2>
     <ul>
       <li>2 pounds skinless, boneless chicken breast halves</li>
