--- a/recipes/lambSouvlaki.html
+++ b/recipes/lambSouvlaki.html
@@ -35,6 +35,13 @@
       himenaeos.
     </p>
 
+    <h3>More Information</h3>
+    <p>
+      For more information on the recipe and its creator follow this
+      <a href="https://www.allrecipes.com/recipe/274173/lamb-souvlaki/">link</a
+      >.
+    </p>
+
     <h2>Ingredients</h2>
     <ul>
       <li>⅓ cup olive oil</li>
