Create img folder and change images links to direct to img folder

--- a/recipes/chickenCurry.html
+++ b/recipes/chickenCurry.html
@@ -8,10 +8,7 @@
   </head>
   <body>
     <h1>Indian Chicken Curry</h1>
-    <img
-      src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2F6df68fc301b1faf4e571eb3b94052e13%2F165610183420220624_151304.jpg&w=317&h=212&c=sc&poi=face&q=60"
-      alt="Indian Chicken Curry"
-    />
+    <img src="../img/curry.jpeg" alt="Indian Chicken Curry" />
 
     <h2>Description</h2>
     <p>
