--- a/recipes/lambSouvlaki.html
+++ b/recipes/lambSouvlaki.html
@@ -8,10 +8,7 @@
   </head>
   <body>
     <h1>Lamb Souvlaki</h1>
-    <img
-      src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F6739403.jpg&w=933&h=933&c=sc&poi=face&q=60"
-      alt="Lamb Souvlaki"
-    />
+    <img src="../img/souvlaki.webp" alt="Lamb Souvlaki" />
 
     <h2>Description</h2>
     <p>
