Add link in recipe pages to home page

--- a/recipes/lambSouvlaki.html
+++ b/recipes/lambSouvlaki.html
@@ -70,5 +70,7 @@
         reserved marinade and turning occasionally for even cooking.
       </li>
     </ol>
+
+    <p><a href="../index.html">Back To Home Page</a></p>
   </body>
 </html>
