--- a/recipes/chickenCurry.html
+++ b/recipes/chickenCurry.html
@@ -86,5 +86,7 @@
         (74 degrees C). Drizzle with lemon juice to serve.
       </li>
     </ol>
+
+    <p><a href="../index.html">Back To Home Page</a></p>
   </body>
 </html>
